mostrar imagenes listo

--- a/Juego/src/juego/Jugar.form
+++ b/Juego/src/juego/Jugar.form
@@ -218,7 +218,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="850" y="560" width="90" height="40"/>
+              <AbsoluteConstraints x="860" y="460" width="90" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -309,6 +309,12 @@
         <Component class="javax.swing.JLabel" name="fotopersonaje1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Foto personaje"/>
+            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[190, 180]"/>
+            </Property>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[190, 180]"/>
+            </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -376,7 +382,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="850" y="370" width="90" height="40"/>
+              <AbsoluteConstraints x="860" y="300" width="90" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
